# factorio-server-maintainer

./: .gitignore  .mise.toml  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  LICENSE  README.md  build.bat  claude_sandbox.bat  clippy.toml  flake.nix  justfile
.github/workflows/: release.yml
crates/ctrlc-helper/: Cargo.toml
crates/ctrlc-helper/src/: main.rs
crates/factorio/: Cargo.toml
crates/factorio/src/: lib.rs
crates/gsm-core/: Cargo.toml
crates/gsm-core/src/: backup.rs  config.rs  lib.rs  logtail.rs  process.rs  server.rs  steamcmd.rs
crates/gui-slint/: Cargo.toml  build.rs
crates/gui-slint/src/: main.rs  translations.rs
crates/gui-slint/ui/: main.slint
crates/valheim/: Cargo.toml
crates/valheim/src/: lib.rs
docs/: factorio-port-notes.md  release-start.en.md  release-start.ja.md  user-guide.en.md  user-guide.ja.md  valheim-server-manager-spec.md
scripts/: package-release.ps1  setup.ps1
