[package]
name = "factorio"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Factorio implementation of gsm-core::GameServerManager."

[dependencies]
gsm-core = { path = "../gsm-core" }
anyhow.workspace = true
async-trait.workspace = true
tokio.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json = "1"
toml.workspace = true
tracing.workspace = true
