[package]
name = "gsm-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "GUI-agnostic, game-agnostic core for dedicated game server management."

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
toml.workspace = true
tokio.workspace = true
async-trait.workspace = true
chrono.workspace = true
tracing.workspace = true
ureq.workspace = true
zip.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }
