[package]
name = "gui-slint"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Slint front-end for the Valheim server manager."

# Pin the Slint style so the build is deterministic and TabWidget / Button /
# LineEdit etc. render with a known modern look regardless of host theme.
[package.metadata.slint]
style = "fluent"

[[bin]]
name = "valheim-server-manager"
path = "src/main.rs"

[dependencies]
gsm-core = { path = "../gsm-core" }
valheim = { path = "../valheim" }
slint.workspace = true
tokio.workspace = true
anyhow.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rfd = "0.14"
# Clipboard for the "公開アドレスをコピー" button. Small, Win32-native.
arboard = "3"

[build-dependencies]
slint-build.workspace = true
