[package]
name = "valheim"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Valheim implementation of gsm-core::GameServerManager."

[dependencies]
gsm-core = { path = "../gsm-core" }
anyhow.workspace = true
async-trait.workspace = true
tokio.workspace = true
chrono.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true
